--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
     <source src="levi.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
+   <img class="center-img"
+     src="https://cdn.magicdecor.in/com/2023/10/20180035/Creative-Anime-Girl-and-Cat-Wallpaper-for-Wall-M.jpg"
+     alt=""
+     height="300"
+     width="500">
     <!-- NAVBAR -->
     <nav>
         <h1> MY <span> WEBSITE </span></h1>
